
Fixed a bug in the L<auto_can|Badger::Class::Methods/auto_can()> feature
of L<Badger::Class::Methods> which prevented it from working with subclasses.

Added no_config() method to L<Badger::Hub>.

Added L<Badger::Comparable> and L<Badger::Duration>.

Added L<plurality()|Badger::Utils/plurality()> and 
L<inflect()|Badger::Utils/inflect()> to L<Badger::Utils>.

=head2 Version 0.09 - 8th February 2012

Added L<Badger::Codec::Timestamp>. Changed L<Badger::Timestamp> to numify
values to remove leading zeroes (e.g. 2012/04/20 now yields a month of 4
instead of 04).

Fixed some obscure bugs in the module loading code in L<Badger::Class> and
related modules that could potentially cause unpredictable results on
case insensitive file systems (e.g. Apple's HFS with default settings).

Added the L<restat()|Badger::Filesystem::Path/restat()> method to
L<Badger::Filesystem::Path>.

Added documentation for various methods that was missing.  Temporary 
disabled the Pod::Coverage tests on AUTOMATED_TESTING systems.  We know 
there's still stuff to do.

Added SLASH to Badger::Constants

=head2 Version 0.08 - 13th January 2012

Restored the C<$VERSION> variable to L<Badger.pm|Badger> rather than using 
the C<version> import hook in L<Badger::Class> which confused PAUSE.

Changed L<Badger::Test::Manager> to detect undefined results.

Merged Michael Grubb's bug fix for L<Badger::Base>:
L<https://github.com/abw/Badger/pull/1>

Fixed some minor documentation issues.

=head2 Version 0.07 - 2nd January 2012

Added L<Badger::Storage>, L<Badger::Storage::Memory>.
and L<Badger::Storage::Filesystem>.

Added L<Badger::Codec::TT>. 

Added the L<permissions()|Badger::Filesystem::Path/permissions()> method to
L<Badger::Filesystem::Path>. Added
L<temp_directory()|Badger::Filesystem/temp_directory()> and
L<temp_file()|Badger::Filesystem/temp_file()> methods to
L<Badger::Filesystem>. Also changed the L<Path()|Badger::Filesystem/Path()>,